[gd_scene load_steps=13 format=2]

[ext_resource path="res://crater/test_mcs_dual_crater.gd" type="Script" id=1]
[ext_resource path="res://node_drawer/node_drawer.gd" type="Script" id=2]
[ext_resource path="res://maujoe.camera_control/scripts/camera_control.gd" type="Script" id=3]

[sub_resource type="OpenSimplexNoise" id=2]

[sub_resource type="NoiseTexture" id=3]
seamless = true
noise = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
flags_world_triplanar = true
albedo_color = Color( 0.533333, 0.67451, 0.8, 1 )
albedo_texture = SubResource( 3 )
uv1_triplanar = true
uv2_triplanar = true

[sub_resource type="OpenSimplexNoise" id=5]

[sub_resource type="NoiseTexture" id=6]
seamless = true
noise = SubResource( 5 )

[sub_resource type="SpatialMaterial" id=7]
flags_world_triplanar = true
albedo_color = Color( 1, 0.572549, 0.227451, 1 )
albedo_texture = SubResource( 6 )
emission_enabled = true
emission = Color( 1, 0.388235, 0.345098, 1 )
emission_energy = 3.0
emission_operator = 0
emission_on_uv2 = false
uv1_triplanar = true
uv2_triplanar = true

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SpatialMaterial" id=8]
flags_unshaded = true
albedo_color = Color( 0, 0.788235, 1, 1 )

[sub_resource type="SpatialMaterial" id=9]
flags_unshaded = true
albedo_color = Color( 1, 0, 0.211765, 1 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.52145 )
far = 5000.0
script = ExtResource( 3 )
max_speed = Vector3( 50, 50, 50 )

[node name="Mesh_0" type="MeshInstance" parent="."]
material_override = SubResource( 4 )

[node name="Mesh_1" type="MeshInstance" parent="."]
material_override = SubResource( 7 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="OctreeNodes" type="ImmediateGeometry" parent="."]
script = ExtResource( 2 )
material = SubResource( 8 )

[node name="DualCells" type="ImmediateGeometry" parent="."]
script = ExtResource( 2 )
material = SubResource( 9 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.918743, 0.394856, 0, -0.394856, 0.918743, 0, 2.07626, 0 )
